content/_generated-doc/2.16/config/quarkus-container-image-docker.adoc

:summaryTableId: quarkus-container-image-docker
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-container-image-docker_configuration]]link:#quarkus-container-image-docker_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.dockerfile-jvm-path]]`link:#quarkus-container-image-docker_quarkus.docker.dockerfile-jvm-path[quarkus.docker.dockerfile-jvm-path]`

[.description]
--
Path to the JVM Dockerfile. If not set $++{++project.root++}++/src/main/docker/Dockerfile.jvm will be used If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_DOCKERFILE_JVM_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_DOCKERFILE_JVM_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.dockerfile-native-path]]`link:#quarkus-container-image-docker_quarkus.docker.dockerfile-native-path[quarkus.docker.dockerfile-native-path]`

[.description]
--
Path to the JVM Dockerfile. If not set $++{++project.root++}++/src/main/docker/Dockerfile.native will be used If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_DOCKERFILE_NATIVE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_DOCKERFILE_NATIVE_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.cache-from]]`link:#quarkus-container-image-docker_quarkus.docker.cache-from[quarkus.docker.cache-from]`

[.description]
--
Images to consider as cache sources. Values are passed to `docker build` via the `cache-from` option

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_CACHE_FROM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_CACHE_FROM+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.network]]`link:#quarkus-container-image-docker_quarkus.docker.network[quarkus.docker.network]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_NETWORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_NETWORK+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.executable-name]]`link:#quarkus-container-image-docker_quarkus.docker.executable-name[quarkus.docker.executable-name]`

[.description]
--
Name of binary used to execute the docker commands. This setting can override the global container runtime detection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_EXECUTABLE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_EXECUTABLE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.build-args-build-args]]`link:#quarkus-container-image-docker_quarkus.docker.build-args-build-args[quarkus.docker.build-args]`

[.description]
--
Build args passed to docker via `--build-arg`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_BUILD_ARGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_BUILD_ARGS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-container-image-docker_quarkus.docker.buildx-configuration-for-docker-buildx-options]]link:#quarkus-container-image-docker_quarkus.docker.buildx-configuration-for-docker-buildx-options[Configuration for Docker Buildx options]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.buildx.platform]]`link:#quarkus-container-image-docker_quarkus.docker.buildx.platform[quarkus.docker.buildx.platform]`

[.description]
--
Which platform(s) to target during the build. See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++platform

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_BUILDX_PLATFORM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_BUILDX_PLATFORM+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.buildx.output]]`link:#quarkus-container-image-docker_quarkus.docker.buildx.output[quarkus.docker.buildx.output]`

[.description]
--
Sets the export action for the build result. See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++output. Note that any filesystem paths need to be absolute paths, not relative from where the command is executed from.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_BUILDX_OUTPUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_BUILDX_OUTPUT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus.docker.buildx.progress]]`link:#quarkus-container-image-docker_quarkus.docker.buildx.progress[quarkus.docker.buildx.progress]`

[.description]
--
Set type of progress output (`auto`, `plain`, `tty`). Use `plain` to show container output (default “`auto`”). See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++progress

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_BUILDX_PROGRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_BUILDX_PROGRESS+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===