content/_generated-doc/3.20/config/quarkus-container-image-docker.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-dockerfile-jvm-path]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-dockerfile-jvm-path[`quarkus.docker.dockerfile-jvm-path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.dockerfile-jvm-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Path to the JVM Dockerfile. If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root. If not set src/main/docker/Dockerfile.jvm will be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_DOCKERFILE_JVM_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_DOCKERFILE_JVM_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`src/main/docker/Dockerfile.jvm`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-dockerfile-native-path]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-dockerfile-native-path[`quarkus.docker.dockerfile-native-path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.dockerfile-native-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Path to the native Dockerfile. If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root. If not set src/main/docker/Dockerfile.native will be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_DOCKERFILE_NATIVE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_DOCKERFILE_NATIVE_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`src/main/docker/Dockerfile.native`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-build-args-arg-name]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-build-args-arg-name[`quarkus.docker.build-args."arg-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.build-args."arg-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Build args passed to docker via `--build-arg`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_BUILD_ARGS__ARG_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_BUILD_ARGS__ARG_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-cache-from]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-cache-from[`quarkus.docker.cache-from`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.cache-from+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Images to consider as cache sources. Values are passed to `docker build`/`podman build` via the `cache-from` option


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_CACHE_FROM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_CACHE_FROM+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-network]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-network[`quarkus.docker.network`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.network+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The networking mode for the RUN instructions during build


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_NETWORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_NETWORK+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-executable-name]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-executable-name[`quarkus.docker.executable-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.executable-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Name of binary used to execute the docker/podman commands. This setting can override the global container runtime detection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_EXECUTABLE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_EXECUTABLE_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-additional-args]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-additional-args[`quarkus.docker.additional-args`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.additional-args+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional arbitrary arguments passed to the executable when building the container image.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_ADDITIONAL_ARGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_ADDITIONAL_ARGS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

h|[[quarkus-container-image-docker_section_quarkus-docker-buildx]] [.section-name.section-level0]##link:#quarkus-container-image-docker_section_quarkus-docker-buildx[Configuration for Docker Buildx options]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-buildx-platform]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-buildx-platform[`quarkus.docker.buildx.platform`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.buildx.platform+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Which platform(s) to target during the build. See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++platform


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_BUILDX_PLATFORM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_BUILDX_PLATFORM+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-buildx-output]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-buildx-output[`quarkus.docker.buildx.output`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.buildx.output+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Sets the export action for the build result. See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++output. Note that any filesystem paths need to be absolute paths, not relative from where the command is executed from.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_BUILDX_OUTPUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_BUILDX_OUTPUT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-docker_quarkus-docker-buildx-progress]] [.property-path]##link:#quarkus-container-image-docker_quarkus-docker-buildx-progress[`quarkus.docker.buildx.progress`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.docker.buildx.progress+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set type of progress output (`auto`, `plain`, `tty`). Use `plain` to show container output (default “`auto`”). See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++progress


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DOCKER_BUILDX_PROGRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DOCKER_BUILDX_PROGRESS+++`
endif::add-copy-button-to-env-var[]
--
|string
|


|===

